# hms-scene-DDGI-demo

./: .gitignore  CMakeLists.txt  README - ZH.md  README-zh.md  README.md  README_ZH.md
android/: build.gradle  settings.gradle
android/examples/DDGIExample/: CMakeLists.txt  DDGIExample.jks  build.gradle
android/examples/DDGIExample/src/main/: AndroidManifest.xml
android/examples/DDGIExample/src/main/java/com/samples/huawei_VulkanDDGI/: VulkanActivity.java
android/examples/base/: CMakeLists.txt
android/gradle/wrapper/: gradle-wrapper.properties
data/models/: Box.gltf  samplebuilding.gltf
data/shaders/glsl/: compileshaders.py
data/shaders/glsl/base/: textoverlay.frag.spv  textoverlay.vert.spv
data/shaders/glsl/woodenroom/: forward.frag  forward.frag.spv  forward.vert  forward.vert.spv  shadowmap.vert  shadowmap.vert.spv
examples/: CMakeLists.txt
examples/DDGIExample/: DDGIExample.cpp  DDGIExample.h  main.cpp
include/: DDGIAPI.h  Traversal.h
